# intermap

./: .coveragerc  .gitignore  .isort.cfg  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  README.md  arguments-reference.html  basic-usage.html  citing.html  dev.yml  environment.yml  how-it-works.html  index.html  installation.html  interactions.html  intervis.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py  tutorials.html
.github/ISSUE_TEMPLATE/: bug_report.md
BUGS/emanuelle-lolita/: annotations.txt  vmdscene.ppm
BUGS/emanuelle-lolita/output/: ._InterMap.pickle
arguments-reference/: index.html
basic-usage/: index.html
citing/: index.html
docs/: basic-usage.md  citing.md  conf.py  index.md  installation.md  interactions.md  intervis.md
example/imap_output/: 8oxoGA2_1_InterMap.pickle
examples/: example_script.py  prot-dna_InterMap.cfg
examples/T1/: prot-dna_InterMap.cfg  traj_sample.dcd
examples/T1/outputs/: prot-dna_InterMap.cfg  prot-dna_InterMap.pickle
how-it-works/: index.html
installation/: index.html
notebooks/: template.ipynb
scripts/: __init__.py  benchmark_data.py  benchmark_plot.py  binary_imap.html  commonplots.py  example_running_detached.py  formats.py  identity.py  plot_giant.py  plot_ninters.py  plot_scalability.py  print_ascii_imap.py  run_n_inters.py  run_prolif.py  scratches.py  sele_shiny.py  train_model.py
scripts/description/: atom_composition.py  description-plot.py
scripts/identity/: 01-concat_trajs.py  01-run_prolif.py  clause-plot.py  create_cfg.py  identity.py  imap.cfg  plot-identity.py  prolif_dict.pkl  run_prolif.py  visualize.ipynb
scripts/identity/IgG3-M1/: imap_dict.pkl  prolif_dict.pkl
scripts/identity/NSP13/: imap_dict.pkl  prolif_dict.pkl
scripts/identity/p53/: imap_dict.pkl  prolif_dict.pkl
scripts/lifetime/: lifetimes.py
scripts/n_inters/: detectors.py
scripts/pandey/: channel5-compact.py  channel5-extended.py
scripts/performance/: benchmark_data.py  benchmark_plot.py
scripts/run-prolif/: run-prolif.py
scripts/scalability/: 01-create_cfg.py  02-plot.py  ncores.py
scripts/tpr/: mpro.xtc  tpr.py  wt_mpro_chainA_rep123.pr5.aligned_CA.not_waters_or_ions.psf
scripts/traspose/: traspose.py
search/: search_index.json
src/intermap/: aot.py  api.py  aro.py  binary_imap.html  commonplots.py  commons.py  config.py  containers.py  create_CSV.py  cutoffs.py  finders.py  geometric.py  geometry.py  indexman.py  indexman2.py  indices.py  interactions.py  interactions2.py  interdict.py  macro.py  njitted.py  others.py  print_ascii_imap.py  runner.py  runner2.py  runner3.py  smarts.py  starters.py  tanimoto.py  testcompare.py  to_csv.py  topo_trajs.py  visualizations.py  waters.py
src/intermap/__pycache__/: commons.get_ball-194.py312.1.nbc  commons.get_ball-194.py312.nbi
src/intermap/descriptors/: __init__.py  geometry.py  main.py  topo_trajs.py
src/intermap/indices/: __init__.py
src/intermap/interactions/: __init__.py  aro.py  geometry.py  indices.py  interdict.py  macro.py  others.py  runners.py  waters.py
src/intermap/interactions/__pycache__/: aro.aro-194.py39.1.nbc  aro.aro-194.py39.nbi  aro.aro-199.py313.1.nbc  aro.aro-199.py313.2.nbc  aro.aro-199.py313.nbi  aro.aro-222.py312.1.nbc  aro.aro-222.py312.2.nbc  aro.aro-222.py312.nbi  aro.get_aro_normals_centroids-54.py312.1.nbc  aro.get_aro_normals_centroids-54.py312.2.nbc  aro.get_aro_normals_centroids-54.py312.nbi  aro.get_aro_xyzs-21.py313.1.nbc  aro.get_aro_xyzs-21.py313.nbi  aro.get_aro_xyzs-21.py39.1.nbc  aro.get_aro_xyzs-21.py39.nbi  aro.get_aro_xyzs-22.py312.1.nbc  aro.get_aro_xyzs-22.py312.2.nbc  aro.get_aro_xyzs-22.py312.nbi  aro.get_intersect_point-54.py39.1.nbc  aro.get_intersect_point-54.py39.nbi  aro.get_intersect_point-57.py313.1.nbc  aro.get_intersect_point-57.py313.nbi  aro.get_intersect_point-65.py312.1.nbc  aro.get_intersect_point-65.py312.nbi  aro.get_normals_and_centroids-43.py39.1.nbc  aro.get_normals_and_centroids-43.py39.nbi  aro.get_normals_and_centroids-46.py313.1.nbc  aro.get_normals_and_centroids-46.py313.nbi  aro.pications-103.py312.1.nbc  aro.pications-103.py312.2.nbc  aro.pications-103.py312.3.nbc  aro.pications-103.py312.4.nbc  (+164 more)
src/intermap/intervis/: __init__.py  run.py
src/intermap/managers/: config.py  container.py  cutoffs.py  indices.py
src/intermap/shiny/: icsv.py  run.py
src/intermap/utils/: __init__.py  interconvert.py
src/intermap/visuals/: __init__.py
tests/: .gitattributes  conftest.py  extractor.py  runner.py  test_commons.py  test_config.py  test_e2e.py  test_geometric.py  test_iman.py  test_macro.py  test_others.py  test_smarts.py  test_traj_chunks.py  test_universe.py
tests/data/T2/: generic.dcd
tests/imaps/: imap1.cfg  imap2.cfg  imap4.cfg
tests/interactions/: __init__.py  test_aro.py  test_geometry.py  test_others.py  test_waters.py
tests/intervis/: __init__.py  test_intervis.py  test_main_helper.py  test_tabs.py  test_ui_helpers.py
tests/managers/: test_config_cli.py  test_config_parsing.py  test_config_validation.py  test_container.py  test_cutoffs.py  test_indices.py
tests/trajs/trj2/: traj.dcd
tutorials/: index.html
(+77 files in other folders)
