# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = intermap
description = Accelerated Detection of Interaction  Fingerprints on Large-Scale Molecular Ensembles
author = Roy González Alemán
author_email = roy.gonzalez.aleman@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://delta-research-team.github.io/intermap/
# Add here related links, for example:
project_urls =
    Documentation = https://delta-research-team.github.io/intermap/
    Source = https://github.com/Delta-Research-Team/intermap
    Tracker = https://github.com/Delta-Research-Team/intermap/issues
#    Download = https://pypi.org/project/PyScaffold/#files

#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    mdanalysis>=2.10.0,<3.0.0
    mdtraj>=1.11.1,<2.0.0
    rdkit>=2025.03.6
    numpy>=2.2.5,<3.0.0
    pandas>=2.3.3,<3.0.0
    networkx>=3.6.1,<4.0.0
    bitarray>=3.0.0,<4.0.0
    numba>=0.61.2,<1.0.0
    uvicorn>=0.40.0,<1.0.0
    shiny>=1.5.1,<2.0.0
    screeninfo>=0.8.1,<1.0.0
    plotly>=5.5.0,<6.0.0
    numpy_indexed>=0.3.7,<1.0.0
    numba_kdtree>=0.5.0,<1.0.0
    openpyxl>=3.1.5,<4.0.0
    fastapi>=0.128.3,<1.0.0
    pyvis>=0.3.2,<1.0.0
    plotly_resampler>=0.11.0,<1.0.0
    rgpack

[options.packages.find]
where = src
#exclude =
#    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install intermap[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    intermap = intermap.runner:run
    intervis = intermap.intervis.run:main
    interconvert = intermap.utils.interconvert:main
# Add here console scripts like:
# console_scripts =
#     script_name = intermap.module:function
# For example:
# console_scripts =
#     fibonacci = intermap.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov=src/intermap
    --cov-report=term-missing
    --verbose

filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore:DCDReader currently makes independent timesteps:DeprecationWarning
    ignore::UserWarning:MDAnalysis.topology.PDBParser
    ignore::UserWarning:MDAnalysis.converters.RDKit
    ignore:Unknown elements found in the trajectory:UserWarning
    ignore:
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[coverage:run]
source = src/intermap
;omit =
;    src/intermap/intervis/*


# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = intermap
extensions =
    dsproject
    no_skeleton
    pre_commit
